--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@reduxjs/toolkit": "1.9.7",
     "dayjs": "1.11.10",
     "firebase": "10.6.0",
-    "lodash.debounce": "4.0.8",
     "notistack": "3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +31,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "4.2.1",
     "@types/lodash.debounce": "4.0.9",
+    "@types/lodash.isequal": "^4.5.8",
     "@types/node": "20.9.0",
     "@types/react": "18.2.25",
     "@types/react-dom": "18.2.7",
@@ -43,6 +43,8 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.3",
+    "lodash.debounce": "4.0.8",
+    "lodash.isequal": "4.5.0",
     "prettier": "3.0.3",
     "typescript": "5.0.2",
     "vite": "4.4.5"
